# notify-python

./: ChangeLog  Makefile.am  Makefile.in  NEWS  aclocal.m4  autogen.sh  configure  configure.ac  notify-python.pc.in
debian/: .git-dpm  changelog  control  copyright  pyversions  rules  watch
src/: Makefile.am  Makefile.in  pynotify.c  pynotify.defs  pynotify.override  pynotifymodule.c
tests/: Makefile.am  Makefile.in
